--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="main.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="./assets/logo.png">
@@ -24,8 +24,8 @@
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><a href="/Programacion-CV/index.html" class="nav-link px-2" id="opcion1">Inicio</a></li>
-              <li><a href="/Programacion-CV/contacto.html" class="nav-link px-2" id="opcion2">Contacto</a></li>
-              <li><a href="/salajuegos" class="nav-link px-2" id="opcion3">Mi recorrido</a></li>       
+              <li><a href="/Programacion-CV/vistas/contacto.html" class="nav-link px-2" id="opcion2">Contacto</a></li>
+              <li><a href="#" class="nav-link px-2" id="opcion3">Mi recorrido</a></li>       
             </ul>
    
           </div>
@@ -370,7 +370,7 @@
           
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-    <script src="./codigo.js"></script>
+    <script src="./main.js"></script>
 
   </body>
 </html>
