--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><a href="/Programacion-CV/index.html" class="nav-link px-2" id="opcion1">Inicio</a></li>
-              <li><a href="/Programacion-CV/vistas/contacto.html" class="nav-link px-2" id="opcion2">Contacto</a></li>
-              <li><a href="#" class="nav-link px-2" id="opcion3">Mi recorrido</a></li>       
+              <li><a href="/Programacion-CV/vistas/contacto/contacto.html" class="nav-link px-2" id="opcion2">Contacto</a></li>
+              <li><a href="/Programacion-CV/vistas/mi-recorrido/mi-recorrido.html" class="nav-link px-2" id="opcion3">Mi recorrido</a></li>       
             </ul>
    
           </div>
@@ -374,12 +374,3 @@
 
   </body>
 </html>
-
-
-<!-- TO DO -->
-<!-- 
-  - Agregar fotos visuales de trabajos realizados a pagina principal carrusel (Minimo 3)
-  - Arreglar opacidad de las fotos
-
-  -Realizar 3ra pantalla con la galeria de tecnologias y lenguajes manejados
- -->
