--- a/vistas/contacto/contacto.html
+++ b/vistas/contacto/contacto.html
@@ -9,10 +9,11 @@
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../main.css">
+    
+    <link rel="stylesheet" href="../../main.css">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="../assets/logo.png">
+    <link rel="icon" type="image/x-icon" href="../../assets/logo.png">
 
 </head>
 <body>
@@ -25,8 +26,8 @@
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><a href="/Programacion-CV/index.html" class="nav-link px-2" id="opcion1">Inicio</a></li>
-              <li><a href="/Programacion-CV/vistas/contacto.html" class="nav-link px-2" id="opcion2">Contacto</a></li>
-              <li><a href="#" class="nav-link px-2" id="opcion3">Mi recorrido</a></li>       
+              <li><a href="/Programacion-CV/vistas/contacto/contacto.html" class="nav-link px-2" id="opcion2">Contacto</a></li>
+              <li><a href="/Programacion-CV/vistas/mi-recorrido/mi-recorrido.html" class="nav-link px-2" id="opcion3">Mi recorrido</a></li>       
             </ul>
    
           </div>
@@ -60,13 +61,6 @@
 
             <button type="submit" id="btn-enviar">Enviar</button>
         </form>
-
-        <div class="col">
-          
-        </div>
-
-
-        <button id="btn-volver-contacto">Volver</button>
 
       </div>
 
