--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="/Programacion-CV/index.html" class="nav-link px-2" id="opcion1">Inicio</a></li>
-              <li><a href="/Programacion-CV/vistas/contacto/contacto.html" class="nav-link px-2" id="opcion2">Contacto</a></li>
-              <li><a href="/Programacion-CV/vistas/mi-recorrido/mi-recorrido.html" class="nav-link px-2" id="opcion3">Mi recorrido</a></li>       
+              <li><a href="./index.html" class="nav-link px-2" id="opcion1">Inicio</a></li>
+              <li><a href="./vistas/contacto/contacto.html" class="nav-link px-2" id="opcion2">Contacto</a></li>
+              <li><a href="./vistas/mi-recorrido/mi-recorrido.html" class="nav-link px-2" id="opcion3">Mi recorrido</a></li>       
             </ul>
    
           </div>
@@ -89,7 +89,7 @@
       
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="/Programacion-CV/assets/trabajos/brainmetive.png" alt="Foto de uno de los mejores trabajos de Gabriel Lopez Gasal" id="foto-trabajo1">
+                      <img src="./assets/trabajos/brainmetive.png" alt="Foto de uno de los mejores trabajos de Gabriel Lopez Gasal" id="foto-trabajo1">
                       <div class="carousel-caption">
                         <h5 class="h5Carrousel">Salón de juegos cognitivos</h5>
                       </div>
