--- a/vistas/contacto/contacto.html
+++ b/vistas/contacto/contacto.html
@@ -25,9 +25,9 @@
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="/Programacion-CV/index.html" class="nav-link px-2" id="opcion1">Inicio</a></li>
-              <li><a href="/Programacion-CV/vistas/contacto/contacto.html" class="nav-link px-2" id="opcion2">Contacto</a></li>
-              <li><a href="/Programacion-CV/vistas/mi-recorrido/mi-recorrido.html" class="nav-link px-2" id="opcion3">Mi recorrido</a></li>       
+              <li><a href="../../index.html" class="nav-link px-2" id="opcion1">Inicio</a></li>
+              <li><a href="../contacto/contacto.html" class="nav-link px-2" id="opcion2">Contacto</a></li>
+              <li><a href="../mi-recorrido/mi-recorrido.html" class="nav-link px-2" id="opcion3">Mi recorrido</a></li>       
             </ul>
    
           </div>
